# LLM-Architecture-guidebook-pro

./: README.md  学习计划.md
.cache/clangd/index/: json_store.cpp.2D9FDD4625F5784A.idx  json_store.h.91C3014F2F36AB12.idx  main.cpp.562531FC2ECC2F48.idx  task.h.C431431D76C006CF.idx  user.cpp.D0E577DA81784C90.idx  user.h.1FDC9E273C0ED84E.idx
DeepLLM/: requirements.txt
DeepLLM/docs/: 完整学习计划-Day1-45.md
DeepLLM/src/models/: gpt.py  transformer.py
DeepLLM/src/training/: trainer.py
LLMEngine/: Cargo.toml
LLMEngine/docs/: 完整学习计划-Day1-30.md
LLMEngine/src/: lib.rs  main.rs
LLMEngine/src/inference/: mod.rs
LLMEngine/src/loader/: mod.rs
LLMEngine/src/model/: mod.rs
LLMEngine/src/quantization/: mod.rs
LLMEngine/src/tokenizer/: mod.rs
LLMEngine/src/utils/: mod.rs
MiniLLM/: Cargo.toml
MiniLLM/docs/: README.md  完整学习计划-Day1-30.md
MiniLLM/src/: main.rs
MiniLLM/src/attention/: mod.rs  multi_head_attention.rs  scaled_dot_product_attention.rs
MiniLLM/src/embedding/: mod.rs  position_embedding.rs  token_embedding.rs
MiniLLM/src/model/: mod.rs
MiniLLM/src/tokenizer/: bpe.rs  mod.rs  wordpiece.rs
MiniLLM/src/transformer/: gpt.rs  mod.rs  transformer_layer.rs
MiniLLM/src/utils/: math.rs  mod.rs
TaskCLI/: README.md
TaskCLI/cpp/: CMakeLists.txt
TaskCLI/cpp/include/model/: task.h  user.h
TaskCLI/cpp/include/storage/: json_store.h
TaskCLI/cpp/src/: main.cpp
TaskCLI/cpp/src/model/: task.cpp  user.cpp
TaskCLI/cpp/src/storage/: json_store.cpp
TaskCLI/docs/: 完整学习路线图.md
TaskCLI/docs/学习指南/: README.md
TaskCLI/docs/深入学习/cpp_advanced/: README.md
TaskCLI/docs/深入学习/rust_advanced/: README.md
TaskCLI/docs/面试准备/: README.md
TaskCLI/rust/: Cargo.toml
TaskCLI/rust/docs/: 完整学习计划-Day1-15.md
TaskCLI/rust/src/: error.rs  main.rs
TaskCLI/rust/src/commands/: add.rs  delete.rs  list.rs  mod.rs  modify.rs  search.rs  stats.rs  user.rs
TaskCLI/rust/src/model/: mod.rs  task.rs  user.rs
TaskCLI/rust/src/storage/: json_store.rs  mod.rs
VisualNovelEngine/: README.md  start_engine.ps1  start_engine.sh
VisualNovelEngine/assets/scripts/: demo_script.txt
VisualNovelEngine/cpp/: CMakeLists.txt  README.md
VisualNovelEngine/cpp/include/core/: Engine.h  EventManager.h
VisualNovelEngine/cpp/include/rendering/: RenderEngine.h
VisualNovelEngine/cpp/include/resources/: ResourceManager.h
VisualNovelEngine/cpp/include/scene/: SceneManager.h
VisualNovelEngine/cpp/include/script/: ScriptEngine.h
VisualNovelEngine/cpp/src/: main.cpp
VisualNovelEngine/cpp/src/core/: Engine.cpp  EventManager.cpp
VisualNovelEngine/cpp/src/rendering/: RenderEngine.cpp
VisualNovelEngine/cpp/src/resources/: ResourceManager.cpp
VisualNovelEngine/cpp/src/scene/: SceneManager.cpp
VisualNovelEngine/cpp/src/script/: ScriptEngine.cpp
VisualNovelEngine/docs/: QUICK_START.md
VisualNovelEngine/docs/学习文档/: Day10_渲染系统.md  Day11_引擎整合理解.md  Day12_运行项目和扩展.md  Day1_Visual_Novel_概念和引擎基础.md  Day2_项目结构分析.md  Day3_Rust基础语法_变量数据类型函数.md  Day4_Rust基础语法_控制流与所有权.md  Day5_Struct结构体和Impl方法.md  Day6_Mod模块系统和代码组织.md  Day7_脚本系统.md  Day8_场景管理系统.md  Day9_资源管理系统.md  README.md  附录A_Rust_Cpp对比.md
VisualNovelEngine/docs/延展学习/: 30天计划详细说明.md  README.md
VisualNovelEngine/docs/延展学习/Day11_指针与引用/: README.md
VisualNovelEngine/docs/延展学习/Day11_指针与引用/src/: main.cpp
VisualNovelEngine/docs/延展学习/Day12_内存管理与RAII/: README.md
VisualNovelEngine/docs/延展学习/Day12_内存管理与RAII/src/: main.cpp
VisualNovelEngine/docs/延展学习/Day1_内存安全基础/: README.md
VisualNovelEngine/docs/延展学习/Day1_内存安全基础/src/: main.rs
VisualNovelEngine/docs/延展学习/Day21_异步编程/: README.md
VisualNovelEngine/docs/延展学习/Day2_生命周期标注/: README.md
VisualNovelEngine/docs/延展学习/Day2_生命周期标注/src/: main.rs
VisualNovelEngine/docs/延展学习/Day3_Trait系统/: README.md
VisualNovelEngine/docs/延展学习/Day3_Trait系统/src/: main.rs
VisualNovelEngine/docs/延展学习/Day4_泛型编程/: README.md
VisualNovelEngine/docs/延展学习/Day5_智能指针/: README.md
VisualNovelEngine/docs/延展学习/Day5_智能指针/src/: main.rs
VisualNovelEngine/docs/延展学习/Day6_错误处理/: README.md
VisualNovelEngine/docs/延展学习/Day7_并发编程/: README.md
VisualNovelEngine/rust/: Cargo.toml  README.md
VisualNovelEngine/rust/src/: main.rs
VisualNovelEngine/rust/src/core/: config.rs  engine.rs  mod.rs
VisualNovelEngine/rust/src/rendering/: mod.rs
VisualNovelEngine/rust/src/resources/: audio.rs  mod.rs  texture.rs
VisualNovelEngine/rust/src/scene/: mod.rs  scene.rs
VisualNovelEngine/rust/src/script/: command.rs  mod.rs
c++与rust语言练习/: bubble.cpp
pygame引擎示例/: main.py
