[package]
name = "mini_llm"
version = "0.1.0"
edition = "2021"
description = "A minimal LLM implementation in Rust for learning"

[dependencies]
ndarray = "0.15"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

[dev-dependencies]
criterion = "0.5"

[[bin]]
name = "mini_llm"
path = "src/main.rs"
