[package]
name = "visual_novel_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
# Window and input management
winit = "0.29"

# Graphics rendering
wgpu = "0.19"
pollster = "0.3"

# Image loading
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }

# Audio playback
rodio = "0.17"

# Font rendering
glyphon = "0.5"

# Script parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Error handling
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Utilities
parking_lot = "0.12"
arc-swap = "1.6"

[[bin]]
name = "vne"
path = "src/main.rs"
